# deep-learning-with-pytorch

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  benchmark.py  chat_history.md  cnn_network.py  cnn_predictor.py  cnn_train.py  galaxy_cnn.pt  network.py  pyproject.toml  tensor_test.py  train.py
