[project]
name = "deep-learning-with-pytorch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]
torchvision = [{ index = "pytorch-cuda" }]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
